syntax = "proto3";
option csharp_namespace = "GrpcInventoryService";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

service GrpcInventoryService {
    rpc AddInventory (GrpcInventoryDto) returns (google.protobuf.StringValue);
    rpc UpdateInventory (GrpcInventoryWithUsernameDto) returns (google.protobuf.Empty);
    rpc DeleteInventory(GrpcInventoryWithUsernameDto) returns(google.protobuf.Empty);
    rpc IncreaseInventory(GrpcInventoryQuantityChangeDto) returns (google.protobuf.Empty);
    rpc DecreaseInventory(GrpcInventoryQuantityChangeDto) returns (google.protobuf.Empty);
    rpc GetById(google.protobuf.StringValue) returns(GrpcInventoryDto);
    rpc GetByName(google.protobuf.StringValue) returns(GrpcInventoryDto);
    rpc GetInventoryList(google.protobuf.Empty) returns(GrpcListedInventories);
}

message GrpcListedInventories{
    repeated GrpcListInventoryDto dto_list = 1;
}

message GrpcInventoryWithUsernameDto{
    GrpcInventoryDto dto = 1;
    string username = 2; // User who modifies the inventory- for tracking
}

message GrpcInventoryQuantityChangeDto{
    GrpcInventoryDto dto = 1;
    int32 amount = 2;
    string username = 3; // User who modifies the inventory - for tracking
}

message GrpcInventoryDto {
    optional string id = 1;
    string name = 2;
    string description = 3;
    int32 in_stock = 4;
    float height = 5;
    float width = 6;
    float weight = 7;
    float price = 8;
    optional string username = 9;
}

message GrpcListInventoryDto {
    optional string id = 1;
    string name = 2;
    int32 in_stock = 3;
    float price = 4;
}